spacing solved

--- a/app.css
+++ b/app.css
@@ -33,8 +33,8 @@ body {
     margin: 0px;
     width: 1100px;
 }
-#bg-home {
-    display: block;
+.bg-home {
+    display: inline-block;
 }
 .add-bottom {
     position: absolute;
